couple tweaks, footer redesign, job#show overflow fixed, wording in a couple spots

--- a/app/assets/stylesheets/Bootstrap/user.scss
+++ b/app/assets/stylesheets/Bootstrap/user.scss
@@ -571,6 +571,7 @@ html {
   float: left;
   margin-left:100px;
   width: 60%;
+  overflow: hidden;
 }
 
 .job_display_skills {
